--- a/docs/assignment564/lab02.Rmd
+++ b/docs/assignment564/lab02.Rmd
@@ -56,7 +56,7 @@ model_y_x4
 b. Construct the analysis-of-variance table and test for significance of regression.
 
 ```{r}
-model_y_x4 %>% summary()
+anova(model_y_x4)
 ```
 
  > The table shows that p-value is less than 5.935e-09. The regression model is significant.
@@ -77,7 +77,11 @@ If the confidence interval for β1 contains 0, it can be concluded there is no s
 
 d. Calculate $R^2$.
 
- > According to the analysis-of-variance table (b.), Multiple R-squared is 0.7205, Adjusted R-squared is 0.7102.
+```{r}
+model_y_x4 %>% summary()
+```
+
+ > According to the table, Multiple R-squared is 0.7205, Adjusted R-squared is 0.7102.
 
 e. Find a 95% CI on the mean heat flux when the radial deflection is 16.5 milliradians.
 
@@ -136,7 +140,7 @@ b. Construct the analysis-of-variance table and test for significance of regress
 
 
 ```{r}
-model_y_x1 %>% summary()
+anova(model_y_x1)
 ```
 
  > The table shows that p-value is 3.82e-11. The regression model is significant.
@@ -217,7 +221,14 @@ b. Test for significance of regression.
 
 c. Plant management believes that an increase in average ambient temperature of 1 degree will increase average monthly steam consumption by 10,000lb. Do the data support this statement?
 
- > Both of the multiple R-squared and Adjusted R-squared are 0.9999, the statement is a ballpark estimate.
+ > We made the null hypothesis H0: $\hat\beta_1=10$ the altertative hypothesis H1: $\hat\beta_1\ne10$. Accroding the method of t test (2.3.1)
+ 
+$$t_0=\frac{\hat\beta_1-\beta_{10}}{\sqrt\frac{M SE}{S_{xx}}}=\frac{\hat\beta_1-\beta_{10}}{se(\hat\beta_1)}$$
+ 
+```{r} 
+2*pt(q = (9.20847-10)/0.03382, df = nrow(table_12)-2 , lower.tail = TRUE)
+```
+ > The result shows that the p_value is 4.593537e-10, which is far less than 0.05. Therefore, we can reject the H0 and the true slope is not equal 10. The data don't support the statement.
 
 d. Construct a 99% prediction interval on steam usage in a month with average ambient temperature of 58°.
 
@@ -259,11 +270,11 @@ $$\hat\beta_0=\bar y-\hat\beta_1\bar x,\quad Var(\hat\beta_1)=\frac{\sigma^2}{S_
 $$Cov(\hat\beta_0, \hatβ_1)=Cov(\bar y-\hat\beta_1\bar x,\ \hatβ_1)=-\bar x\ Cov(\hatβ_1,\hatβ_1)=-\bar x\ Var(\hat\beta_1)=−\bar x\frac{\sigma^2}{S_{xx}}$$
 
 
-b. Show that $Cov(\bar y,\beta_1) = 0$.
+b. Show that $Cov(\bar y,\hat\beta_1) = 0$.
 
 For a simple linear regression model $y=\beta_0+\beta_1x + \epsilon$, with $E(\epsilon)=0,\ Var(\epsilon)=\sigma^2$, and $\epsilon$ uncorrelated, $\bar y$ is a constant.
 
-$$\therefore\quad Cov(\bar y,\beta_1) = 0$$
+$$\therefore\quad Cov(\bar y,\hat\beta_1) = 0$$
 
 ## Problem 5: 
 Exercise 2.26 (Page 65): Consider the simple linear regression model $y=\beta_0+\beta_1x + \epsilon$, with $E(\epsilon)=0,\ Var(\epsilon)=\sigma^2$, and $\epsilon$ uncorrelated.
@@ -277,7 +288,7 @@ b. Show that $E(MS_{Res})=\sigma^2$.
 
  > According the appendix C.3.2,  MSE=SSE/(n-2) is an unbiased estimator for $\sigma^2$
 
-$$E(MSE)=E(\frac{SSR}{n-2})=\frac{\sigma^2}{n-2}E(\chi_{n-2}^2)=\sigma^2$$
+$$E(MSE)=E(\frac{SSE}{n-2})=\frac{\sigma^2}{n-2}E(\chi_{n-2}^2)=\sigma^2$$
 
 ## Problem 6: 
 
