--- a/static/assignment561/hw02.Rmd
+++ b/static/assignment561/hw02.Rmd
@@ -20,7 +20,7 @@ C | B dies |
 
 Calculate P(A|W) as a function of Y. For what values of Y is P(A|W) less than,equal to, or greater than 1/3?  
 
- > A, B, c is a partitions of sample space. According the Beyes' rule
+ > A, B, c is a partitions of sample space. According the Bayes' rule
  
 $$P(A|W)=\frac{P(W|A)P(A)}{P(W|A)P(A)+P(W|B)P(B)+P(W|C)P(C)}=\frac{\gamma\frac13}{\gamma\frac13+0\frac13+\frac13}=\frac{\gamma}{\gamma+1}$$
 
@@ -38,20 +38,20 @@ $$P(C|W)=\frac{P(W|C)P(C)}{P(W|A)P(A)+P(W|B)P(B)+P(W|C)P(C)}=\frac{\frac13}{\fra
 
  > When A and B are pairwise disjoint, $P(A\cap{B})=0$. 
 
-$$\because\quad P(A)P(B)>0\quad \therefore\quad P(A)P(B)\ne P(A\cap{B})$$
+$$\because\quad P(A)>0,\ P(B)>0,\ P(A)P(B)>0\quad \therefore\quad P(A)P(B)\ne P(A\cap{B})$$
 
  > Therefore, A and B does not satisfy the definition of **statistically independent**
 
 (b) If A and B are independent, they cannot be mutually exclusive.
 
- > Acrroding the definition of statistically independent, When A and B are independent, $P(A\cap{B})=P(A)P(B)>0$, which means $A\cap B\ne\emptyset$. Therefore, A and B does not satisfy the definition of **paiwise disjoint**$
+ > Acrroding the definition of statistically independent, When A and B are independent, $P(A\cap{B})=P(A)P(B)$. For P(A)>0 and P(B)>0, P(A\cap{B})>0, which means $A\cap B\ne\emptyset$. Therefore, A and B does not satisfy the definition of **paiwise disjoint**
 
 **1.47** Prove that the following functions are cdfs.
 
  > According the Theorem 1.5.3 about **cumulative distribution function**, A cdf F(x) should satisfy 3 conditions:   
 a. $\lim_{x\to-\infty}F(x)=0\ \& \lim_{x\to\infty}F(x)=1$;  
 b. F is non-decreasing; and   
-c. F is right-continuous, which means $\lim_{x\to\infty}f(x)>0$
+c. F is right-continuous; that is, for every number x0, $\lim_{x\to\infty}F(x)=F(x_0)$
 
 (a) $\frac12+\frac1\pi\tan^{-1}(x), x\in-(\infty,\infty)$
 
@@ -59,18 +59,23 @@ $$\lim_{x\to-\infty}F(x)=\lim_{x\to-\infty}[\frac12+\frac1\pi\tan^{-1}(x)]=\frac
 
 $$\lim_{x\to\infty}F(x)=\frac12+\frac1\pi(\frac\pi2)=1$$
 
-$$f(x)'=\frac\partial{\partial{x}}[\frac12+\frac1\pi\tan^{-1}(x)]=\frac1{\pi(1+x^2)}>0$$
+ > This function satisfies the condition a. Differentiating Fx(x) gives
 
+$$F(x)'=\frac\partial{\partial{x}}[\frac12+\frac1\pi\tan^{-1}(x)]=\frac1{\pi(1+x^2)}>0$$
+
+ > showing that F(x) is increasing and right-continuous. F(x) is a continuous cdf..
 
 (b) $(1+e^{-x})^{-1} , x\in(-\infty,\infty)$
-
- > This is a Continuous cdf.
 
 $$\because\quad \lim_{x\to-\infty}e^x=0,\quad\lim_{x\to-\infty}e^{-x}=\infty,\quad \lim_{x\to-\infty}\frac1{1+e^{-x}}=0\quad \therefore\lim_{x\to-\infty}F(x)=0$$
 
 $$\text{in the same way, }\lim_{x\to\infty}F(x)=\lim_{x\to\infty}\frac1{1+e^{-x}}=\lim_{x\to\infty}\frac1{1+0}=1$$
 
-$$f(x)'=\frac\partial{\partial{x}}\frac1{1+e^{-x}}=\frac{e^{-x}}{(1+e^{-x})^2}>0$$
+ > This function satisfies the condition a. Differentiating Fx(x) gives
+
+$$F(x)'=\frac\partial{\partial{x}}\frac1{1+e^{-x}}=\frac{e^{-x}}{(1+e^{-x})^2}>0$$
+
+ > showing that F(x) is increasing and right-continuous. F(x) is a continuous cdf.
 
 (c) $e^{-e^{-x}}, x\in(-\infty,\infty)$
 
@@ -78,8 +83,11 @@ $$\because\quad \lim_{x\to-\infty}e^x=0,\quad\lim_{x\to-\infty}e^{-x}=\infty,\qu
 
 $$\text{in the same way, }\lim_{x\to\infty}F(x)=\lim_{x\to\infty}e^{-e^{-x}}=e^0=1$$
 
-$$f(x)'=\frac\partial{\partial{x}}e^{-e^{-x}}=e^{-e^{-x}}\frac\partial{\partial{x}}(-e^{-x})=e^{-e^{-x}}(-e^{-x})\frac\partial{\partial{x}}(-x)=e^{-e^{-x}}e^{-x}>0$$
+ > This function satisfies the condition a. Differentiating Fx(x) gives
 
+$$F(x)'=\frac\partial{\partial{x}}e^{-e^{-x}}=e^{-e^{-x}}\frac\partial{\partial{x}}(-e^{-x})=e^{-e^{-x}}(-e^{-x})\frac\partial{\partial{x}}(-x)=e^{-e^{-x}}e^{-x}>0$$
+
+ > showing that F(x) is increasing and right-continuous. F(x) is a continuous cdf.
 
 (d) $1-e^{-x}, x\in(0,\infty)$
 
@@ -87,24 +95,29 @@ $$\because\quad \lim_{x\to-\infty}e^x=1,\quad\lim_{x\to-\infty}e^{-x}=1,\quad \t
 
 $$\text{in the same way, }\lim_{x\to\infty}F(x)=\lim_{x\to\infty}(1-e^{-x})=1-e^0=1$$
 
-$$f(x)'=\frac\partial{\partial{x}}(1-e^{-x})=-e^{-x}\frac\partial{\partial{x}}(-x)=e^{-x}>0$$
+ > This function satisfies the condition a. Differentiating Fx(x) gives
+
+$$F(x)'=\frac\partial{\partial{x}}(1-e^{-x})=-e^{-x}\frac\partial{\partial{x}}(-x)=e^{-x}>0$$
+
+ > showing that F(x) is increasing and right-continuous. F(x) is a continuous cdf.
 
 (e) the function defined in (1.5.6)  
 
 $F_Y(y)=\begin{cases}\frac{1-\epsilon}{1+e^{-y}}，& y<0\\\epsilon+\frac{1-\epsilon}{1+e^{-y}}，& y\ge0\end{cases} $
 
- > This is a cdf with jumps.
- 
  $$\lim_{y\to-\infty}F_Y(y)=\lim_{y\to-\infty}\frac{1-\epsilon}{1+e^{-y}}=0$$
 
  $$\lim_{y\to\infty}F_Y(y)=\epsilon+\frac{1-\epsilon}{1+e^{-y}}=\epsilon+1-\epsilon=1$$
 
+ > The limit point is 0. 
+ 
  $$\lim_{y\to0}F_Y(y)=\epsilon+\frac{1-\epsilon}{1+e^{-y}}=1=F(0)$$
 
- > The limit point is 0. No jump occurs when F(y) approaches 0 from the right. And $0<\epsilon<1$
+ > No jump occurs when F(y) approaches 0 from the right. And $0<\epsilon<1$. This function satisfies the condition a and c. Differentiating Fx(x) gives
 
+$$F(y)'=\frac\partial{\partial{y}}(\epsilon+\frac{1-\epsilon}{1+e^{-y}})=(1-\epsilon)\frac{1+e^{-y}+\frac\partial{\partial{y}}(e^{-y})}{(1+e^{-y})^2}=\frac{1-\epsilon}{(1+e^{-y})^2}>0$$
 
-$$f(y)'=\frac\partial{\partial{y}}(\epsilon+\frac{1-\epsilon}{1+e^{-y}})=(1-\epsilon)\frac{1+e^{-y}+\frac\partial{\partial{y}}(e^{-y})}{(1+e^{-y})^2}=\frac{1-\epsilon}{(1+e^{-y})^2}>0$$
+ > showing that F(x) is increasing. F(x) is a continuous cdf.
 
 **1.54** For each of the following, determine the value of c that makes F(x) a pdf.
 
@@ -114,13 +127,19 @@ b. $\sum_xfx (x) = 1 (pmf)\ or \int_{-\infty}^{\infty}fx (x) dx=1\ (pdf)$
 
 (a) $f(x)=c\sin{x}, 0<x<\pi/2$
 
+
+
 $$\because 0<x<\pi/2,\ \sin{x}\in[0,1],\quad \therefore when\ c\ge0,\quad fx(x)\ge0$$
 
+ > THis is a continuous function. let c safisfy the equation. 
+ 
 $$\because \int_{0}^{\frac\pi2}sin(x)dx=1,\quad \therefore c=\frac11=1$$
 
 (b) $f(x)=ce^{-|x|}, -\infty< x < \infty$
     
 $$\because -\infty<-|x|\le0,\ e^{-|x|}\in(0,1],\quad \therefore when\ c\ge0,\quad fx(x)\ge0$$
+
+ > THis is a continuous function. let c safisfy the equation. 
 
 $$\because \int_{-\infty}^{\infty}e^{-|x|}dx=\int_{-\infty}^{0}e^{x}dx+\int_{0}^{\infty}e^{-x}dx=2,\quad \therefore c=\frac12$$
 
@@ -129,13 +148,12 @@ $$\because \int_{-\infty}^{\infty}e^{-|x|}dx=\int_{-\infty}^{0}e^{x}dx+\int_{0}^
 
 $$f_T(t)=\frac1{1.5}e^{-\frac{t}{1.5}},\ t>0$$
 
-$$\because -\infty<-\frac{t}{1.5}<0,\quad \therefore  \frac1{1.5}e^{-\frac{t}{1.5}}\in(0,\frac23)$$
-
-$$And\quad \int_{0}^{\infty}\frac1{1.5}e^{-\frac{t}{1.5}}dx=1$$
+<!--$$\because -\infty<-\frac{t}{1.5}<0,\quad \therefore  \frac1{1.5}e^{-\frac{t}{1.5}}\in(0,\frac32)$$
+$$And\quad \int_{0}^{\infty}\frac1{1.5}e^{-\frac{t}{1.5}}dx=1$$-->
 
  > According the theorem 1.5.10 of **identically distributed**
 
-$$F_V(v)=P(V\le v)=P(T\le t)=F_T(t)$$
+$$F_V(t)=P(V\in(-\infty, t] )=P(T\in(-\infty, t])=F_T(t)$$
 
  > According the definition 1.6.3 of **probability density function**  
 When 0<t<3, V=5, then
