--- a/static/assignment561/hw03.Rmd
+++ b/static/assignment561/hw03.Rmd
@@ -56,24 +56,25 @@ $$\therefore \lim_{n\to\infty}F_X(x+\frac1n)=F_X(x)$$
 
 
 **2.2** In each of the following find the pdf of Y.
-(a) Y X2 and fx (x) 1 , 0 < x < 1
+(a) $Y=X^2\quad and\quad fx(x)=1, 0<x<1$
 
-(b) Y = log X and X has pdf
-I ( ) = (n + m + 1 )1 n(1 _ )m
-X x I I x x ,
-n. m.
+(b) $Y=-\log X$ and X has pdf
 
-(c) Y = eX and X has pdf
-0 < x < 1, m , n positive integers
-Ix(x) == 􀮇 xe-(x/u)2/ (1 2, 0 < x < 00, (12 a positive constant
+$$f_X(x)=\frac{(n+m+1)!}{n!m!}X^n(1-x)^m,\quad 0<x<1,\quad
+n,m\ positive\ integers$$
 
+(c) $Y=e^X$ and X has pdf
 
-**2.12** A random right triangle can be constructed in the following manner. Let X be a random angle whose distribution is uniform on (D, 7r/2). For each X, construct a triangle as pictured below. Here, Y = height of the random triangle. For a fixed constant d, find the distribution of Y and E Y.
+$$fx(x)=\frac1{\sigma^2}xe^{-(x/\sigma)^2/2},\quad 0<x<\infty,\quad\sigma^2\ a\ positive\ constant$$
 
 
+**2.12** A random right triangle can be constructed in the following manner. Let X be a random angle whose distribution is uniform on $(0, \pi/2)$. For each X, construct a triangle as pictured below. Here, Y = height of the random triangle. For a fixed constant d, find the distribution of Y and EY.
 
-**2.17** A median of a distribution is a value m such that P(X :.::; m) :::: 􀂫 and P(X :::: m) :::: 􀂫 .(If X i s continuous, m satisfies f:.:a I(x) dx = f: I(x) dx = i .) Find the median of the following distributions.
 
-(a) I(x) = 3x2, 0 < X < 1 
 
-(b) I(x) = 'Ir(I 􀄙 x2)' -00 < X < 00
+**2.17** A median of a distribution is a value m such that $P(X\lem)\ge\frac12\ and\ P(X\gem)\ge\frac12$. (If X i s continuous, m satisfies $\int_{-\infty}^mf(x)dx=\int_m^\infty f(x)dx=\frac12$.) Find the median of the following distributions.
+
+(a) $f(x)=3x^2,\quad 0<X<1$  
+
+(b) $f(x)=\frac1{\pi(1+x^2)},\quad-\infty<X<\infty$
+
