--- a/static/assignment561/hw02.Rmd
+++ b/static/assignment561/hw02.Rmd
@@ -103,7 +103,7 @@ $$F(x)'=\frac\partial{\partial{x}}(1-e^{-x})=-e^{-x}\frac\partial{\partial{x}}(-
 
 (e) the function defined in (1.5.6)  
 
-$F_Y(y)=\begin{cases}\frac{1-\epsilon}{1+e^{-y}}，& y<0\\\epsilon+\frac{1-\epsilon}{1+e^{-y}}，& y\ge0\end{cases} $
+$$F_Y(y)=\begin{cases}\frac{1-\epsilon}{1+e^{-y}}，& y<0\\\epsilon+\frac{1-\epsilon}{1+e^{-y}}，& y\ge0\end{cases} $$
 
  $$\lim_{y\to-\infty}F_Y(y)=\lim_{y\to-\infty}\frac{1-\epsilon}{1+e^{-y}}=0$$
 
