--- a/docs/lecture564/reading03.Rmd
+++ b/docs/lecture564/reading03.Rmd
@@ -36,14 +36,16 @@ $$\Bigg[\dfrac{(n-2)\hat{\sigma}^2}{\chi^2_{\frac\alpha2}}, \dfrac{(n-2)\hat{\si
 
 `2018.10.10`
 
-#### Ex 2 Contd.: Consider the following data set, in which the variables of interest are x=conmmuting distance(miles) and y=commuting time (min).
+### Ex 2 Contd
+
+Consider the following data set, in which the variables of interest are x=conmmuting distance(miles) and y=commuting time (min).  
 
 
----|---|---|---|---|---
-x|5|10|15|20|25
-y|8|16|22|23|31
-$\hat y=4.1+1.06x$|9.4|14.7|20|25.3|30.6
-$e^2=(y-\hat y)^2$|1.96|1.69|4|5.29|0.16
+x|5|10|15|20|25 
+---|---|---|---|---|--- 
+y|8|16|22|23|31 
+$\hat y=4.1+1.06x$|9.4|14.7|20|25.3|30.6 
+$e^2=(y-\hat y)^2$|1.96|1.69|4|5.29|0.16 
 
 
 $$\hat\sigma^2=MSE=\frac{SSE}{n-2}=\frac{\sum_1^n(y-\hat y)^2}{n-2}=\frac{13.1}{5-2}=4.367 $$
@@ -88,4 +90,4 @@ $$se(\hat{\beta_0})=\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}=4.367(\
 
 $$\hat{\beta_0}\pm t_{\alpha/2}se(\hat{\beta_0})=4.1\pm3.182\times2.1917=(-2.874,11.074)$$
 
-Since zero is inside thsi interval, ture intercept ($\beta_0$) can be zero with 95% confidence.
+ > Since zero is inside thsi interval, ture intercept ($\beta_0$) can be zero with 95% confidence.
