--- a/docs/assignment564/lab02.Rmd
+++ b/docs/assignment564/lab02.Rmd
@@ -297,16 +297,33 @@ $$\because \hat y_i=\hat\beta_0+\hat\beta_1x_i,\quad \hat\beta_0=\bar y-\bar x\h
 
 $$SSR=\sum_{i=1}^n(\hat y_i-\bar y)^2=\sum_{i=1}^n(\hat\beta_0+\hat\beta_1x_i-\bar y)^2=\sum_{i=1}^n(\bar y-\bar x\hat\beta_1+\hat\beta_1x_i-\bar y)^2=\hat\beta_1^2\sum_{i=1}^n(x_i-\bar x)^2=\hat\beta_1^2S_{xx}$$
 
-$$\therefore E(MSR)=\frac{E(SSR)}1=E(\hat\beta_1^2S_{xx})=S_{xx}\left(Var(\hat\beta_1)+[E(\hat\beta_1)]^2\right)=S_{xx}(\frac{\sigma^2}{S_{xx}}+\beta_1^2)=\sigma^2+\beta_1^2S_{xx}$$
+$$\because Var(\hat\beta_1)=E(\hat\beta_1^2)-[E(\hat\beta_1)]^2=\frac{\sigma^2}{S_{xx}},\quad E(\hat\beta_1)=\hat\beta_1$$
+
+$$\therefore E(\hat\beta_1^2)=Var(\hat\beta_1)+[E(\hat\beta_1)]^2=\frac{\sigma^2}{S_{xx}}+\hat\beta_1^2$$
+
+
+$$\therefore E(MSR)=\frac{E(SSR)}1=E(\hat\beta_1^2S_{xx})=S_{xx}E(\hat\beta_1^2)=S_{xx}(\frac{\sigma^2}{S_{xx}}+\beta_1^2)=\sigma^2+\beta_1^2S_{xx}$$
 
 
 b. Show that $E(MS_{Res})=\sigma^2$.
 
- > According the appendix C.3.2,  MSE=SSE/(n-2) is an unbiased estimator for $\sigma^2$
+$$Step 1:\quad SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)^2=\sum_{i=1}^n(y_i-\bar y+\bar x\hat\beta_1-\hat\beta_1x_i)^2=\sum_{i=1}^n((y_i-\bar y)-\hat\beta_1(x_i-\bar x))^2$$
 
-$$SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)^2=\sum_{i=1}^n(\bar y-\bar x\hat\beta_1+\hat\beta_1x_i-\bar y)^2=\hat\beta_1^2\sum_{i=1}^n(x_i-\bar x)^2=\hat\beta_1^2S_{xx}$$
 
-$$E(MSE)=E(\frac{SSE}{n-2})=\frac{\sigma^2}{n-2}E(\chi_{n-2}^2)=\sigma^2$$
+
+$$=\sum_{i=1}^n(y_i-\bar y)^2-2\hat\beta_1(y_i-\bar y)(x_i-\bar x)+\hat\beta_1^2(x_i-\bar x)^2=S_{yy}-2\hat\beta_1S_{xy}+\hat\beta_1^2S_{xx}$$
+$$\because \hat\beta_1=\frac{S_{xy}}{S_{xx}}\quad\therefore S_{xy}=\hat\beta_1S_{xx}$$
+
+$$\implies SSE=S_{yy}-2\hat\beta_1\hat\beta_1S_{xx}+\hat\beta_1^2S_{xx}=S_{yy}-\hat\beta_1^2S_{xx}=S_{yy}-SSR$$
+
+
+
+$$Step 2:\quad E(S_{yy})=[omitted]=\hat\beta_1^2S_{xx}+(n-1)\sigma^2$$
+
+
+$$\therefore E(SSE)=E(S_{yy})-E(SSR)=\hat\beta_1^2S_{xx}+(n-1)\sigma^2-(\sigma^2+\hat\beta_1^2S_{xx})=(n-2)\sigma^2$$
+
+$$Step 3:\quad E(MSE)=E(\frac{SSE}{n-2})=\frac{E(SSE)}{n-2}=\frac{\sigma^2(n-2)}{n-2}=\sigma^2$$
 
 ## Problem 6: 
 
