--- a/docs/assignment564/lab02.Rmd
+++ b/docs/assignment564/lab02.Rmd
@@ -307,7 +307,9 @@ $$\therefore E(MSR)=\frac{E(SSR)}1=E(\hat\beta_1^2S_{xx})=S_{xx}E(\hat\beta_1^2)
 
 b. Show that $E(MS_{Res})=\sigma^2$.
 
-$$Step 1:\quad SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)^2=\sum_{i=1}^n(y_i-\bar y+\bar x\hat\beta_1-\hat\beta_1x_i)^2=\sum_{i=1}^n((y_i-\bar y)-\hat\beta_1(x_i-\bar x))^2$$
+> Step 1:
+
+$$SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)^2=\sum_{i=1}^n(y_i-\bar y+\bar x\hat\beta_1-\hat\beta_1x_i)^2=\sum_{i=1}^n((y_i-\bar y)-\hat\beta_1(x_i-\bar x))^2$$
 
 
 
@@ -316,14 +318,16 @@ $$\because \hat\beta_1=\frac{S_{xy}}{S_{xx}}\quad\therefore S_{xy}=\hat\beta_1S_
 
 $$\implies SSE=S_{yy}-2\hat\beta_1\hat\beta_1S_{xx}+\hat\beta_1^2S_{xx}=S_{yy}-\hat\beta_1^2S_{xx}=S_{yy}-SSR$$
 
+> Step 2:
 
-
-$$Step 2:\quad E(S_{yy})=[omitted]=\hat\beta_1^2S_{xx}+(n-1)\sigma^2$$
+$$E(S_{yy})=[omitted]=\hat\beta_1^2S_{xx}+(n-1)\sigma^2$$
 
 
 $$\therefore E(SSE)=E(S_{yy})-E(SSR)=\hat\beta_1^2S_{xx}+(n-1)\sigma^2-(\sigma^2+\hat\beta_1^2S_{xx})=(n-2)\sigma^2$$
 
-$$Step 3:\quad E(MSE)=E(\frac{SSE}{n-2})=\frac{E(SSE)}{n-2}=\frac{\sigma^2(n-2)}{n-2}=\sigma^2$$
+> Step 3:
+
+$$E(MSE)=E(\frac{SSE}{n-2})=\frac{E(SSE)}{n-2}=\frac{\sigma^2(n-2)}{n-2}=\sigma^2$$
 
 ## Problem 6: 
 
